--- a/main.css
+++ b/main.css
@@ -9,11 +9,10 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
-#Red{ border-top-color: #f00;}
-#Orange{border-top-color:  #ffa500;}
-#Yellow{border-top-color: #ff0; }
-#Green{ border-top-color:#00bc3f;}
-#Blue{ border-top-color: #06f;}
-#Indigo{border-top-color:#8a2be2; }
-#Violet{border-top-color: #d300c9;}
-
+#red{ border-top-color: #f00;}
+#orange{border-top-color:  #ffa500;}
+#yellow{border-top-color: #ff0; }
+#green{ border-top-color:#00bc3f;}
+#blue{ border-top-color: #06f;}
+#indigo{border-top-color:#8a2be2; }
+#violet{border-top-color: #d300c9;}
